# MewgenicsSLManager

./: .gitignore  README.md  README_CN.md  index.html  latest.json  package-lock.json  package.json  updater.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: .tauri-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: README.md  fix_ability_db.py
src-tauri/data/abilities/en/: basic_attack.json  basic_move.json  butcher_active.json  butcher_passive.json  colorless_active.json  colorless_passive.json  disorder.json  druid_active.json  druid_passive.json  fighter_active.json  fighter_passive.json  hunter_active.json  hunter_passive.json  jester_active.json  jester_passive.json  mage_active.json  mage_passive.json  medic_active.json  medic_passive.json  monk_active.json  monk_passive.json  necromancer_active.json  necromancer_passive.json  psychic_active.json  psychic_passive.json  tank_active.json  tank_passive.json  thief_active.json  thief_passive.json  tinkerer_active.json  tinkerer_passive.json
src-tauri/data/furniture/en/: furniture_db.json
src-tauri/data/mutations/en/: all.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup_manager.rs  commands.rs  config.rs  data_loader.rs  lib.rs  lz4.rs  main.rs  process_manager.rs  save_editor.rs  save_parser.rs  watcher.rs
src-tauri/wix/: main.wxs
src/components/: BackupItem.tsx  BackupList.tsx  GameBackupDialog.tsx  HeroSection.tsx  SaveInfoCard.tsx  SettingsDialog.tsx  TitleBar.tsx  TopNav.tsx  UpdateDialog.tsx
src/hooks/: useConfig.ts
(+14 files in other folders)
