[package]
name = "meowloader-tauri"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
lz4_flex = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "meowloader_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
