[package]
name = "mewgenics-sl-manager"
version = "1.4.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
lz4_flex = "0.11"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5"
notify = "7"
notify-debouncer-mini = "0.5"
sysinfo = "0.30"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "mewgenics_sl_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
